nested dto eklendi, customer medialari backend uri yapildi